[tool.poetry]
name = "oscar-utils"
version = "0.1.0"
description = ""
authors = ["Pedro Ortiz Suarez <pedro.ortiz@dfki.de>"]
readme = "README.md"
packages = [{include = "oscar_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = {extras = ["cli"], version = "^0.14.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
